k8s/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: registry.gitlab.com/finestructure/swiftpackageindex:2.112.1
        name: swiftpackageindex
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
