k8s/ingress-5432.yaml
--- # https://kubernetes.github.io/ingress-nginx/user-guide/exposing-tcp-udp-services/
apiVersion: v1
kind: ConfigMap
metadata:
  name: tcp-services
  namespace: ingress-nginx
data:
  5432: "default/postgres:5432"
--- # https://kubernetes.github.io/ingress-nginx/user-guide/exposing-tcp-udp-services/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-spi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 8080
--- # https://kubernetes.github.io/ingress-nginx/user-guide/exposing-tcp-udp-services/
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: proxied-tcp-5432
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
# Add to ingress controller's deployment args
# args:
#    - /nginx-ingress-controller
#    - --tcp-services-configmap=ingress-nginx/tcp-services
